--- a/site/templates/layouts/default.twig
+++ b/site/templates/layouts/default.twig
@@ -26,8 +26,8 @@
     </aside>
     <nav class="">
       <ul class="p1">
-        {% for i in 1..9 %}
-        <li><a class="block ul:hover" href="work.html">Page #{{ i }}</a></li>
+        {% for _page in site.pages.listed %}
+        <li><a class="inline-block ul:hover{% if _page.id == page.id %} bg-yellow{% endif %}" href="{{ _page.url }}">{{ _page.title }}</a></li>
         {% endfor %}
       </ul>
     </nav>
