--- a/src/css/index.css
+++ b/src/css/index.css
@@ -3,7 +3,7 @@
 .body {
   display: grid;
   grid-template-columns: 3fr 10fr;
-  grid-template-rows: auto auto auto;
+  grid-template-rows: repeat(3, min-content);
 }
 
 .main {
