--- a/site/templates/pages/homepage.twig
+++ b/site/templates/pages/homepage.twig
@@ -1,1 +1,13 @@
 {% extends layout() %}
+
+{% block main %}
+
+  <div class="grid3">
+    {% for i in 1..20 %}
+    <article class="p1">
+      <svg class="block bg-black-05" viewBox="0 0 1 1"></svg>
+    </article>
+    {% endfor %}
+  </div>
+
+{% endblock %}
