--- a/site/templates/layouts/default.twig
+++ b/site/templates/layouts/default.twig
@@ -23,13 +23,7 @@
 
   <main class="main">
 
-    <div class="grid3">
-      {% for i in 1..20 %}
-      <article class="p1">
-        <svg class="block bg-black-05" viewBox="0 0 1 1"></svg>
-      </article>
-      {% endfor %}
-    </div>
+    {% block main none %}
 
   </main>
 
