--- a/site/templates/layouts/default.twig
+++ b/site/templates/layouts/default.twig
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <title>{% block title %}{{ page.title }} &ndash; {{ site.title }}{% endblock %}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="stylesheet" href="{{ kirby.url }}/static/master.css">
 </head>
