main grid, responsivity

--- a/site/templates/layouts/default.twig
+++ b/site/templates/layouts/default.twig
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="stylesheet" href="{{ kirby.url }}/static/master.css">
 </head>
-<body class="body max80 mx p1 lh4">
+<body class="body py1 sd-px1 lh4">
 
   <header>
     <h1 class="p1"><a class="block fw700" href="{{ kirby.url }}">{{ site.title }}</a></h1>
