--- a/site/templates/pages/homepage.twig
+++ b/site/templates/pages/homepage.twig
@@ -2,7 +2,7 @@
 
 {% block main %}
 
-  <div class="grid3">
+  <div class="sd-grid2 ld-grid3">
     {% for i in 1..20 %}
     <article class="p1">
       <svg class="block bg-black-05" viewBox="0 0 1 1"></svg>
