css: copy anchor

--- a/src/css/-copy.css
+++ b/src/css/-copy.css
@@ -19,6 +19,9 @@
   & figcaption {
     font-style: italic;
   }
+  & a {
+    text-decoration: underline;
+  }
   & img {
     display: block;
     max-width: 100%;
