type: Inter as default font-family

--- a/static/master.css
+++ b/static/master.css
@@ -1,3 +1,5 @@
+@import url('https://rsms.me/inter/inter.css');
+
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p,
 blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img,
 ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center,
@@ -3629,6 +3631,16 @@ svg {
 
 .copy em {
   font-style: italic;
+}
+
+html {
+  font-family: 'Inter', sans-serif;
+}
+
+@supports (font-variation-settings: normal) {
+  html {
+    font-family: 'Inter var', sans-serif;
+  }
 }
 
 .body {
