--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,6 +1,22 @@
 @import 'abrusco';
 @import '-copy';
 
+/* Inter font-family */
+
+@import url('https://rsms.me/inter/inter.css');
+
+html {
+  font-family: 'Inter', sans-serif;
+}
+
+@supports (font-variation-settings: normal) {
+  html {
+    font-family: 'Inter var', sans-serif;
+  }
+}
+
+/* main grid */
+
 .body {
   max-width: 28rem;
   margin-left: auto;
