--- a/site/templates/pages/textpage.twig
+++ b/site/templates/pages/textpage.twig
@@ -2,11 +2,9 @@
 
 {% block main %}
 
-  <div class="p1">
-    <h1 class="bold">{{ page.title }}</h1>
-  </div>
   {% if page.text.notEmpty %}
   <div class="p1 copy lh4">
+    <h1>{{ page.title }}</h1>
     {{ page.text | kt }}
   </div>
   {% endif %}
