--- a/site/templates/layouts/default.twig
+++ b/site/templates/layouts/default.twig
@@ -5,6 +5,7 @@
   <title>{% block title %}{{ page.title }} &ndash; {{ site.title }}{% endblock %}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="stylesheet" href="{{ kirby.url }}/static/master.css">
+  <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
 </head>
 <body class="body my1 py05 lh4">
 
