--- a/site/templates/layouts/default.twig
+++ b/site/templates/layouts/default.twig
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="stylesheet" href="{{ kirby.url }}/static/master.css">
   <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/brands.css">
 </head>
 <body class="body my1 py05 lh4">
 
@@ -43,6 +44,15 @@
         {% endfor %}
       </ul>
     </nav>
+    {% if site.social.notEmpty %}
+    <aside class="py05 sd-p05">
+      <ul class="p05 row flex-wrap">
+        {% for item in site.social.toStructure %}
+        <li class="p05 h3 lh1"><a class="block" title="{{ item.name }}" href="{{ item.url }}"><span class="fab inline-block" aria-hidden="true">&#x{{ item.code }};</span><span class="hide">{{ item.name }}</span></a></li>
+        {% endfor %}
+      </ul>
+    </aside>
+    {% endif %}
   </header>
 
   <main class="main py05 sd-p05">
