--- a/site/templates/pages/project.twig
+++ b/site/templates/pages/project.twig
@@ -8,7 +8,7 @@
       <div class="p1 copy lh4">
         <h1>{{ page.title }}</h1>
         {% if page.text.notEmpty %}
-        {{ page.text | kt }}
+        {{ page.text | kt({ width: 640, srcset: [ 320, 640, 960, 1280 ] }) }}
         {% endif %}
       </div>
 
