footer html fix

--- a/site/templates/layouts/default.twig
+++ b/site/templates/layouts/default.twig
@@ -64,7 +64,7 @@
   {% if site.footer.notEmpty %}
   <footer class="py05 sd-p05">
     <div class="p1">
-      <p>{{ site.footer | kt }}</p>
+      {{ site.footer | kt }}
     </div>
   </footer>
   {% endif %}
