--- a/site/templates/layouts/default.twig
+++ b/site/templates/layouts/default.twig
@@ -63,7 +63,7 @@
 
   {% if site.footer.notEmpty %}
   <footer class="py05 sd-p05">
-    <div class="p1">
+    <div class="p1 copy">
       {{ site.footer | kt }}
     </div>
   </footer>
