--- a/site/templates/pages/project.twig
+++ b/site/templates/pages/project.twig
@@ -56,7 +56,7 @@
           alt="{{ _image.alt }}"
         >
         {% if _image.caption.notEmpty %}
-        <figcaption class="copy italic"><p>{{ _image.caption | kti }}</p></figcaption>
+        <figcaption class="copy italic mt025"><p>{{ _image.caption | kti }}</p></figcaption>
         {% endif %}
       </figure>
       {% endfor %}
