--- a/site/templates/pages/project.twig
+++ b/site/templates/pages/project.twig
@@ -5,10 +5,14 @@
   <div class="ld-row">
     <div class="span1 order9">
 
-      <div class="p1 copy lh4">
-        <h1>{{ page.title }}</h1>
+      <div class="p025">
+        <div class="p075">
+          <h1 class="h2 ld-h3 lh2 fw800">{{ page.title }}</h1>
+        </div>
         {% if page.text.notEmpty %}
-        {{ page.text | kt({ width: 640, srcset: [ 320, 640, 960, 1280 ] }) }}
+        <div class="p075 copy lh4">
+          {{ page.text | kt({ width: 640, srcset: [ 320, 640, 960, 1280 ] }) }}
+        </div>
         {% endif %}
       </div>
 
