--- a/site/templates/pages/textpage.twig
+++ b/site/templates/pages/textpage.twig
@@ -3,9 +3,13 @@
 {% block main %}
 
   {% if page.text.notEmpty %}
-  <div class="p1 copy lh4">
-    <h1>{{ page.title }}</h1>
-    {{ page.text | kt({ width: 640, srcset: [ 320, 640, 960, 1280 ] }) }}
+  <div class="p025">
+    <div class="p075">
+      <h1 class="h2 lh2 fw800">{{ page.title }}</h1>
+    </div>
+    <div class="p075 copy lh4">
+      {{ page.text | kt({ width: 640, srcset: [ 320, 640, 960, 1280 ] }) }}
+    </div>
   </div>
   {% endif %}
 
