--- a/src/css/-copy.css
+++ b/src/css/-copy.css
@@ -24,7 +24,6 @@
     margin-top: 0;
   }
   & h1 {
-    font-weight: 800;
     font-size: 28px;
     line-height: 32px;
   }
@@ -36,6 +35,7 @@
     font-size: 18px;
     line-height: 24px;
   }
+  & h1,
   & h2,
   & h3,
   & h4,
