--- a/src/css/-copy.css
+++ b/src/css/-copy.css
@@ -1,6 +1,6 @@
 .copy {
   line-height: 1.5;
-  & > * {
+  & * {
     max-width: 36rem;
   }
   & h1,
@@ -127,5 +127,25 @@
   }
   & dd + dt {
     margin-top: .5em;
+  }
+}
+
+.video {
+  position: relative;
+  width: 100%;
+  &::before {
+    content: "";
+    display: block;
+    padding-top: calc(100% * 720 / 1280);
+  }
+  & iframe {
+    display: block;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
   }
 }
