--- a/static/master.css
+++ b/static/master.css
@@ -3630,7 +3630,7 @@ svg {
   line-height: 1.5;
 }
 
-.copy > * {
+.copy * {
   max-width: 36rem;
 }
 
@@ -3764,6 +3764,28 @@ svg {
 
 .copy dd + dt {
   margin-top: .5em;
+}
+
+.video {
+  position: relative;
+  width: 100%;
+}
+
+.video::before {
+  content: "";
+  display: block;
+  padding-top: calc(100% * 720 / 1280);
+}
+
+.video iframe {
+  display: block;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
 }
 
 html {
