social links css fix

--- a/site/templates/layouts/default.twig
+++ b/site/templates/layouts/default.twig
@@ -48,7 +48,7 @@
     <aside class="py05 sd-p05">
       <ul class="p05 row flex-wrap">
         {% for item in site.social.toStructure %}
-        <li class="p05 h3 lh1"><a class="block" title="{{ item.name }}" href="{{ item.url }}"><span class="fab inline-block" aria-hidden="true">&#x{{ item.code }};</span><span class="hide">{{ item.name }}</span></a></li>
+        <li class="p05 h3 lh0"><a class="block" title="{{ item.name }}" href="{{ item.url }}"><span class="fab block" aria-hidden="true">&#x{{ item.code }};</span><span class="hide">{{ item.name }}</span></a></li>
         {% endfor %}
       </ul>
     </aside>
