--- a/site/templates/layouts/default.twig
+++ b/site/templates/layouts/default.twig
@@ -26,7 +26,7 @@
         alt="{{ site.title }}"
       ></a></figure>
       {% else %}
-      <h1 class="p1"><a class="inline-block bold" href="{{ kirby.url }}">{{ site.title }}</a></h1>
+      <h1 class="p1"><a class="block h1 lh1 fw800" href="{{ kirby.url }}">{{ site.title }}</a></h1>
       {% endif %}
       {% endwith %}
     </div>
