--- a/site/templates/layouts/default.twig
+++ b/site/templates/layouts/default.twig
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>{% block title %}{{ page.title }} &ndash; {{ site.title }}{% endblock %}</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="{{ kirby.url }}/static/master.css">
   <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/brands.css">
